# element-android

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  AUTHORS.md  CHANGES.md  CONTRIBUTING.md  ELEMENT_CHANGES.md  FEATURES.md  Gemfile  PRIVACY.md  README.md  SECURITY.md  TCHAP_CHANGES.md  TRANSLATION-ANDROID-PORT.md  Why do you switch it up  alternative_package.sh  build.gradle  codemagic(1).yaml  correct_strings.sh  correct_strings_de.sh  coverage.gradle  dangerfile-lite.js  dangerfile.js  dependencies.gradle  dependencies_groups.gradle  eval_cpu.sh  flavor.gradle  generate_bubbles.sh  generate_themes.sh  gradle.properties  increment_version.sh  index.html  index.md  integration_tests_script.sh  integration_tests_script_github.sh  legacy_icons.sh  merge_helpers.sh  navigation.html  post_merge.sh  (+7 more)
.buildkite/: pipeline.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/: build.gradle
attachment-viewer/: build.gradle
baselineprofile/: build.gradle
changelog.d/: +check-intent.bugfix  +picker.bugfix  +update-login-splash-screen.bugfix  0000.misc  12.misc  1491.bugfix  1673.bugfix  1809.feature  1823.bugfix  2133.feature  2210.bugfix  2243.feature  2329.feature  2396.wip  240.feature  2467.bugfix  2585.feature  2614.feature  2648.bugfix  2684.bugfix  2725.feature  2782.misc  2843.bugfix  2846.bugfix  2909.feature  2965.bugfix  3048.bugfix  3182.feature  3243.bugfix  3273.feature  3296.bugfix  3333.bugfix  3347.bugfix  3395.bugfix  3437.bugfix  3444.bugfix  3444.feature  3449.bugfix  3451.feature  3457.misc  (+1197 more)
diff-match-patch/: build.gradle
docs/: _developer_onboarding.md  add_email.md  add_threePids.md  analytics.md  color_migration_guide.md  danger.md  database_migration_test.md  design.md  flipper.md  hilt_migration.md  identity_server.md  installing_from_ci.md  integration_tests.md  jitsi.md  mavericks_migration.md  nightly_build.md  notifications.md  pull_request.md  rust_crypto_integration.md  rx_flow_migration.md  screenshot_testing.md  signin.md  signup.md  ui-tests.md  unifiedpush.md  unit_testing.md  voip_signaling.md
fastlane/: Appfile  Fastfile  README.md
fastlane_alternatives/: fcm_full_description.txt  foss_full_description.txt  testing_foss_short_description.txt
fastlane_testing/: fcm_full_description.txt  foss_full_description.txt
graphics/: icon_gen.sh
matrix-api-client/: build.gradle
matrix-sdk-android/: build.gradle  lint.xml  package-list  proguard-rules.pro
matrix-sdk-android-flow/: build.gradle
matrix-sdk-android-rx/: build.gradle
matrix-sdk-core/: build.gradle
matrix-sdk-rx/: build.gradle
matrix-sdk-sqldelight/: build.gradle
multipicker/: build.gradle
newsfragment/: 1.feature  1458.feature  2449.feature  2593.bugfix  3196.feature  3207.bugfix  3293.misc  3313.feature  3355.feature  3396.feature  3401.bugfix  3404.feature  3406.bugfix  3420.feature  3424.bugfix  3430.feature  3435.feature  3442.bugfix  3448.feature  3459.feature  3467.misc  3479.removal  3501.feature  3520.misc
provider/: build.gradle
reactions/: build.gradle
rust-sdk/: Cargo.toml  Makefile  README.md  build.rs
rust-sdk/src/: backup_recovery_key.rs  device.rs  error.rs  lib.rs  logger.rs  machine.rs  olm.udl  responses.rs  users.rs  verification.rs
scripts/: pages.json  sourceset_dependencies.js
tmp_sc_fastlane/: Appfile  README.md  report.xml
tools/: compressVideo.sh  debug_alter_scalar_token.sh  debug_dump_filesystem.sh  debug_dump_prefs.sh  hs_diag.py  (+6 more)
(+20924 files in other folders)
