[package]
name = "matrix-crypto-bindings"
version = "0.1.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "matrix_crypto"

[dependencies]
serde = "1.0.126"
serde_json = "1.0.64"
http = "0.2.4"
base64 = "0.13.0"

thiserror = "1.0.25"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
uniffi = "0.12.0"

[dependencies.js_int]
version = "0.2.1"
features = ["lax_deserialize"]

[dependencies.matrix-sdk-common]
git = "https://github.com/matrix-org/matrix-rust-sdk/"
rev = "3a8ff2f6b43f312b7582146ed712ff245ef9d5aa"

[dependencies.matrix-sdk-crypto]
git = "https://github.com/matrix-org/matrix-rust-sdk/"
rev = "3a8ff2f6b43f312b7582146ed712ff245ef9d5aa"
features = ["sled_cryptostore"]

[dependencies.tokio]
version = "1.7.1"
default_features = false
features = ["rt-multi-thread"]

[dependencies.ruma]
version = "0.2.0"
features = ["client-api"]

[build-dependencies]
uniffi_build = "0.12.0"
