[package]
name = "matrix-crypto-bindings"
version = "0.1.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "matrix_crypto"

[dependencies]
serde = "1.0.126"
serde_json = "1.0.64"
http = "0.2.4"
base64 = "0.13.0"

thiserror = "1.0.25"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
uniffi = "0.14.0"
pbkdf2 = "0.8.0"
sha2 = "0.9.5"
rand = "0.8.4"
hmac = "0.11.0"

[dependencies.js_int]
version = "0.2.1"
features = ["lax_deserialize"]

[dependencies.matrix-sdk-common]
path = "/home/poljar/werk/matrix/nio-rust/crates/matrix-sdk-common/"
# git = "https://github.com/matrix-org/matrix-rust-sdk/"
# rev = "9bae87b0ac213f9d37c033e76ea3a336e164cf02"

[dependencies.matrix-sdk-crypto]
# git = "https://github.com/matrix-org/matrix-rust-sdk/"
# rev = "9bae87b0ac213f9d37c033e76ea3a336e164cf02"
path = "/home/poljar/werk/matrix/nio-rust/crates/matrix-sdk-crypto/"
features = ["sled_cryptostore", "qrcode", "backups_v1"]

[dependencies.tokio]
version = "1.7.1"
default_features = false
features = ["rt-multi-thread"]

[dependencies.ruma]
git = "https://github.com/ruma/ruma"
rev = "0101e110f"
features = ["client-api-c"]

[build-dependencies]
uniffi_build = "0.12.0"
