[package]
name = "matrix-crypto-bindings"
version = "0.1.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "matrix_crypto"

[dependencies]
serde = "1.0.126"
serde_json = "1.0.64"
http = "0.2.4"
base64 = "0.13.0"

thiserror = "1.0.25"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
uniffi = "0.15.1"
pbkdf2 = "0.8.0"
sha2 = "0.9.5"
rand = "0.8.4"
hmac = "0.11.0"

[dependencies.js_int]
version = "0.2.1"
features = ["lax_deserialize"]

[dependencies.matrix-sdk-common]
git = "https://github.com/matrix-org/matrix-rust-sdk/"
rev = "009ead2eeaf365e1fb0f790557f20d4eaf6874ae"

[dependencies.matrix-sdk-crypto]
git = "https://github.com/matrix-org/matrix-rust-sdk/"
rev = "009ead2eeaf365e1fb0f790557f20d4eaf6874ae"
features = ["sled_cryptostore", "qrcode", "backups_v1"]

[dependencies.tokio]
version = "1.7.1"
default_features = false
features = ["rt-multi-thread"]

[dependencies.ruma]
git = "https://github.com/ruma/ruma"
rev = "fdbc4d6d1dd273c8a6ac95b329943ed8c68df70d"
features = ["client-api-c"]

[build-dependencies]
uniffi_build = "0.15.1"
